fixed text contrast

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 :root {
   --background-color: #141414;
   --text-color: #fff;
-  --anchor-text-color: #0081cc;
+  --anchor-text-color: #52beff; /* #0081cc */
   --navbar-background: #282828;
 }
 *,
